--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
             <version>4.25.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
