--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
             <version>7.10.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.11.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
